PlayFab - Add persona piece type filters
